arreglos de un par de cositas

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USER    		= "Personajes"
-DB_PASSWORD		= "Personajes"
+DB_USER    		= "alumno"
+DB_PASSWORD		= "alumno"
 DB_SERVER_OLD  	= "A-PHZ2-CEO-008" 
-DB_SERVER_OLD1  = "A-PHZ2-CEO-008"
+DB_SERVER_OLD1  = "N059DE100"
 DB_SERVER       = "localhost"
 DB_DATABASE		= "DAI-Personajes"
